UCF-APR2.4/ftr main/force-app/main/default/objects/DGF__c/DGF__c.object-meta.xml
<CustomObject>
    <label>Data Gathering Form</label>
    <nameField>
        <label>DGF Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DGFs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>