UCF-APR2.4/ftr main/force-app/main/default/objects/DGF__c/fields/Bandwidth__c.field-meta.xml
<CustomField>
    <fullName>Bandwidth__c</fullName>
    <label>Bandwidth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
                <label>5M</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10M</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>20M</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>50M</label>
            </value>
            <value>
                <fullName>100</fullName>
                <label>100M</label>
            </value>
            <value>
                <fullName>200</fullName>
                <label>200M</label>
            </value>
            <value>
                <fullName>500</fullName>
                <label>500M</label>
            </value>
            <value>
                <fullName>1000</fullName>
                <label>1G</label>
            </value>
            <value>
                <fullName>10G</fullName>
            </value>
            <value>
                <fullName>25G</fullName>
            </value>
            <value>
                <fullName>50G</fullName>
            </value>
            <value>
                <fullName>100G</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>10000</fullName>
                <isActive>false</isActive>
                <label>10000</label>
            </value>
            <value>
                <fullName>15</fullName>
                <isActive>false</isActive>
                <label>15</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>2000</fullName>
                <isActive>false</isActive>
                <label>2000</label>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
            <value>
                <fullName>30</fullName>
                <isActive>false</isActive>
                <label>30</label>
            </value>
            <value>
                <fullName>300</fullName>
                <isActive>false</isActive>
                <label>300</label>
            </value>
            <value>
                <fullName>3000</fullName>
                <isActive>false</isActive>
                <label>3000</label>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>4</label>
            </value>
            <value>
                <fullName>40</fullName>
                <isActive>false</isActive>
                <label>40</label>
            </value>
            <value>
                <fullName>400</fullName>
                <isActive>false</isActive>
                <label>400</label>
            </value>
            <value>
                <fullName>4000</fullName>
                <isActive>false</isActive>
                <label>4000</label>
            </value>
            <value>
                <fullName>5000</fullName>
                <isActive>false</isActive>
                <label>5000</label>
            </value>
            <value>
                <fullName>6</fullName>
                <isActive>false</isActive>
                <label>6</label>
            </value>
            <value>
                <fullName>60</fullName>
                <isActive>false</isActive>
                <label>60</label>
            </value>
            <value>
                <fullName>600</fullName>
                <isActive>false</isActive>
                <label>600</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>