UCF-APR2.4/ftr main/force-app/main/default/objects/DGF__c/fields/Existing_IPs__c.field-meta.xml
<CustomField>
    <fullName>Existing_IPs__c</fullName>
    <description>Space for users to enter customer existing IP</description>
    <inlineHelpText>If customer has assigned IPs provide them here</inlineHelpText>
    <label>Existing IPs</label>
    <type>TextArea</type>
</CustomField>