UCF-APR2.4/ftr main/force-app/main/default/objects/DGF__c/fields/Is_this_a_Managed_Dedicated_Internet__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_Managed_Dedicated_Internet__c</fullName>
    <inlineHelpText>Is this Managed Network Services?</inlineHelpText>
    <label>Is this a Managed Dedicated Internet?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>