UCF-APR2.4/ftr main/force-app/main/default/objects/DGF__c/fields/Topology__c.field-meta.xml
<CustomField>
    <fullName>Topology__c</fullName>
    <label>Topology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>FLATLAN</fullName>
            </value>
            <value>
                <fullName>Flat LAN Dual Stack v4 &amp; v6</fullName>
            </value>
            <value>
                <fullName>Flat LAN v4</fullName>
                <default>true</default>
                <label>Flat LAN v4</label>
            </value>
            <value>
                <fullName>Flat LAN v6</fullName>
            </value>
            <value>
                <fullName>WAN/LAN</fullName>
            </value>
            <value>
                <fullName>WAN/LAN Dual Stack v4 &amp; v6</fullName>
            </value>
            <value>
                <fullName>WAN/LAN v4</fullName>
            </value>
            <value>
                <fullName>WAN/LAN v6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>