UCF-APR2.4/ftr main/force-app/main/default/objects/DGF__c/recordTypes/EIA.recordType-meta.xml
<RecordType>
    <fullName>EIA</fullName>
    <active>true</active>
    <label>EIA</label>
</RecordType>