UCF-APR2.4/ftr main/force-app/main/default/objects/DGF__c/recordTypes/ELAN.recordType-meta.xml
<RecordType>
    <fullName>ELAN</fullName>
    <active>false</active>
    <label>ELAN</label>
</RecordType>