UCF-APR2.4/ftr main/force-app/main/default/objects/DGF__c/recordTypes/ELINE.recordType-meta.xml
<RecordType>
    <fullName>ELINE</fullName>
    <active>false</active>
    <label>ELINE</label>
</RecordType>