UCF-APR2.4/ftr main/force-app/main/default/objects/DGF__c/recordTypes/Ethernet.recordType-meta.xml
<RecordType>
    <fullName>Ethernet</fullName>
    <active>true</active>
    <description>Data Gathering form for Managed Dedicated Internet, DIA, EVPL &amp; ELAN</description>
    <label>Ethernet</label>
</RecordType>