UCF-APR2.4/ftr main/force-app/main/default/objects/DGF__c/recordTypes/Simple_Point_to_Point_ELINE.recordType-meta.xml
<RecordType>
    <fullName>Simple_Point_to_Point_ELINE</fullName>
    <active>false</active>
    <label>Simple Point-to-Point ELINE</label>
</RecordType>